FIX: Se corrigen problemas de autenticación

--- a/CGMedicalAPI/src/main/resources/application.properties
+++ b/CGMedicalAPI/src/main/resources/application.properties
@@ -15,5 +15,7 @@ spring.security.user.name=celllarod
 spring.security.user.password=admin
 
 # App Properties
-bezkoder.app.jwtSecret= bezKoderSecretKey
-bezkoder.app.jwtExpirationMs= 86400000
+# Clave con la que se firmará el token
+cgmedical.app.jwtSecret= celllarodSecretKey 
+# Tiempo de expiración del token (30 días)
+cgmedical.app.jwtExpirationMs= 2592000000
