FEAT: Se añaden servicio de creación de nuevo fármaco

--- a/CGMedicalAPI/src/main/resources/application.properties
+++ b/CGMedicalAPI/src/main/resources/application.properties
@@ -1,20 +1,26 @@
+## Server Configuraion
 server.port = 8081
 
-spring.jpa.hibernate.ddl-auto=none
 
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=never
+server.error.include-exception=true
+
+## JPA
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+## Conexión BBDD Postgres
 spring.sql.init.mode=always
 spring.sql.init.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=celllarod
 spring.datasource.password=admin
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-# Spring Security
+## Spring Security
 spring.security.user.name=celllarod
 spring.security.user.password=admin
-
-# App Properties
 # Clave con la que se firmará el token
 cgmedical.app.jwtSecret= celllarodSecretKey 
 # Tiempo de expiración del token (30 días)
