--- a/AppTFG/app/build.gradle
+++ b/AppTFG/app/build.gradle
@@ -48,6 +48,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation('androidx.cardview:cardview:1.0.0')
+    implementation 'androidx.cardview:cardview:1.0.0'
 
 }
