FEAT: Se modifca vista detalle y registro

--- a/AppTFG/app/src/main/AndroidManifest.xml
+++ b/AppTFG/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         <activity
             android:name=".DetalleActivity"
             android:exported="false"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.AppTFG.NoActionBar"
             android:windowSoftInputMode="adjustPan|stateHidden" />
         <activity
