--- a/AppTFG/app/build.gradle
+++ b/AppTFG/app/build.gradle
@@ -53,5 +53,6 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
 
 }
