--- a/AppTFG/app/build.gradle
+++ b/AppTFG/app/build.gradle
@@ -54,5 +54,7 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.makeramen:roundedimageview:2.3.0'
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+
 
 }
