--- a/AppTFG/app/build.gradle
+++ b/AppTFG/app/build.gradle
@@ -36,25 +36,35 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.6.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    // Ciclo de vida
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+    // Navegacion
     implementation 'androidx.navigation:navigation-fragment:2.4.2'
     implementation 'androidx.navigation:navigation-ui:2.4.2'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.annotation:annotation:1.3.0'
+    // Constraint Layout
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    // Mateial
+    implementation 'com.google.android.material:material:1.6.0'
+    // Testing
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    // Logs HTTP
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    // RecyclerView
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    // CardView
     implementation 'androidx.cardview:cardview:1.0.0'
+    // Vista imagen redonda
     implementation 'com.makeramen:roundedimageview:2.3.0'
+    // Flex
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
+    // SwipeRefreshLayout
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
-
-
 }
