--- a/CGMedicalAPI/src/main/resources/application.properties
+++ b/CGMedicalAPI/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-## Server Configuraion
+## Server Configuracion
 server.port = 8081
-
-
 server.error.include-message=always
 server.error.include-binding-errors=always
 server.error.include-stacktrace=never
@@ -22,6 +20,9 @@ spring.datasource.password=admin
 spring.security.user.name=celllarod
 spring.security.user.password=admin
 # Clave con la que se firmará el token
-cgmedical.app.jwtSecret= celllarodSecretKey 
+cgmedical.app.jwtSecret= celllarodSecretKey
 # Tiempo de expiración del token (30 días)
 cgmedical.app.jwtExpirationMs= 2592000000
+
+
+
